--- a/package.json
+++ b/package.json
@@ -1,23 +1,8 @@
 {
-  "name": "create-element",
+  "name": "component-create-element",
   "description": "HTML element string creator",
   "version": "0.2.3",
-  "author": {
-    "name": "Jonathan Ong",
-    "email": "me@jongleberry.com",
-    "url": "http://jongleberry.com",
-    "twitter": "https://twitter.com/jongleberry"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/component/create-element.git"
-  },
-  "bugs": {
-    "url": "https://github.com/component/create-element/issues",
-    "email": "me@jongleberry.com"
-  },
-  "license": "MIT",
-  "scripts": {
-    "test": "node test"
-  }
+  "main": "index.js",
+  "dependencies": {},
+  "license": "MIT"
 }
